--- a/hello-world.html
+++ b/hello-world.html
@@ -1,6 +1,10 @@
+<head>
+  <link href="css/styles.css" rel="stylesheet" type ="text/css">
+  <title></title>Hello World</title>
+</head>
+
 <h1> Hello World </h1>
 <h2> A program to greet the planet. </h2>
-
 <p>This page is an attempt to greet everyone on Earth using our various human languages.  We're interested to see how long our list can become. </p>
 
 <p>We'll start with languages that the Epicodus staff could offer without using Google. </p>
